<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation= "vertical" 
    android:background="@color/opaque_black">
	 
    <LinearLayout 
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerInParent = "true"
	 >
    <EditText android:id="@+id/enter_project_name"
       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_project_name" 
        />
    
       <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:onClick="sendOk" 
       />
       <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:onClick="sendCancel"  
       />
       
       </LinearLayout>
 
</RelativeLayout>
