<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".ImageAnnotateActivity" >

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView, TextureView etc
         -->


    <!--
         <TextView
        
        
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />
    -->

    <ImageView
        android:id="@+id/edit_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true" >
    </ImageView>

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true" >

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:background="@color/black_overlay"
            android:orientation="vertical"
            tools:ignore="UselessParent" >

            <EditText
                android:id="@+id/annotate_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Annotate_text"
                android:imeOptions="actionDone"/>"
  

            <Spinner
                android:id="@+id/size_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/color_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/allign_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button1"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="sendConfirm"
                android:text="@string/confirm" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="sendNotConfirm"
                android:text="@string/cancel" />
        </LinearLayout>
    </FrameLayout>

</FrameLayout>